syntax = "proto3";

package payment;

option go_package = "payment-service/payment";

message StripeCustomerRequest {
    string user_id = 1;
    string payment_id = 2;
    string email = 3;
}

message StripeCustomerResponse {
    string email = 1;
    string customer_id = 2;
}

message CreatePaymentRequest {
    string user_id = 1;
    string payment_id = 2;
    string email = 3;
    float amount = 4;
    string delivery_address = 5;
    string country = 6;
    string cart_item_id = 7;
    string currency= 8;
    bool save_card = 9;
}

message CreatePaymentResponse {
    string client_secret = 1;
    string buyer_user_id = 2;
}

message WebhookRequest {}

message WebhookResponse {}

service PaymentService {
    rpc StripeCustomer(StripeCustomerRequest) returns (StripeCustomerResponse);
    rpc CreatePayment(CreatePaymentRequest) returns (CreatePaymentResponse);
    rpc Webhook(WebhookRequest) returns (WebhookResponse);
}
